--- a/_config.yml
+++ b/_config.yml
@@ -93,17 +93,17 @@ analytics:
 
 # Site Author
 author:
-  name             : "공부하는 식빵맘 👱‍♀️"
-  avatar           : "https://user-images.githubusercontent.com/42318591/108615416-2e1bb580-7447-11eb-8a54-6338e53ce625.png"
-  bio              : "반갑습니다 :)"
+  name             : "미니"
+  avatar           : ""
+  bio              : "미니의 시간을 기록하는 공간"
   #location         : "Seoul, South Korea"
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:bboddak@gmail.com"
+      url: "mailto:m.j25ng@gmail.com"
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/ansohxxn"
+      url: "https://j25ngmin.github.io"
     #- label: "Instagram"
     #  icon: "fab fa-fw fa-instagram"
     #  url: "https://instagram.com/06.25ash"
@@ -123,7 +123,7 @@ footer:
   links:
     - label: "GitHub"
       icon: "fab fa-fw fa-github"
-      url: "https://github.com/ansohxxn"
+      url: "https://j25ngmin.github.io"
     #- label: "Twitter"
     #  icon: "fab fa-fw fa-twitter-square"
       # url:
